--- a/SistemaAlmacenesWeb/Forms/Principal.Master
+++ b/SistemaAlmacenesWeb/Forms/Principal.Master
@@ -63,6 +63,9 @@
                                 <li>
                                     <asp:LinkButton ID="lnkbtnGenerarToken" runat="server" CausesValidation="false" OnClick="lnkbtnGenerarToken_Click" Visible="false" >Generar token</asp:LinkButton>
                                 </li>
+                                <li>
+                                    <asp:LinkButton ID="lnkbtnBuscarItem" runat="server" CausesValidation="false" OnClick="lnkbtnBuscarItem_Click" Visible="false" >Buscar Item</asp:LinkButton>
+                                </li>
                             </ul>
                         </div>
                     </li>
