--- a/SistemaAlmacenesWeb/Forms/Principal.Master
+++ b/SistemaAlmacenesWeb/Forms/Principal.Master
@@ -64,7 +64,7 @@
                                     <asp:LinkButton ID="lnkbtnGenerarToken" runat="server" CausesValidation="false" OnClick="lnkbtnGenerarToken_Click" Visible="false" >Generar token</asp:LinkButton>
                                 </li>
                                 <li>
-                                    <asp:LinkButton ID="lnkbtnBuscarItem" runat="server" CausesValidation="false" OnClick="lnkbtnBuscarItem_Click" Visible="false" >Buscar Item</asp:LinkButton>
+                                    <asp:LinkButton ID="lnkbtnBuscarItem" runat="server" CausesValidation="false" OnClick="lnkbtnBuscarItem_Click" Visible="false" >Rastrear pedidos</asp:LinkButton>
                                 </li>
                             </ul>
                         </div>
